# trustline

./: .coverage  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
api/: deps.py  main.py
api/routes/: audit.py  compliance.py  correspondents.py  ingest.py  search.py
dags/: bcb538_report.py  lgpd_audit.py  llm_eval.py  risk_scoring.py
eval/: golden_dataset.json  run_eval.py
helm/trustline/: Chart.yaml  values.yaml
helm/trustline/templates/: configmap.yaml  deployment.yaml  service.yaml
infra/: docker-compose.yml  prometheus.yml
infra/localstack/: init.sh
scripts/: run_demo.py  seed_data.py
tests/: conftest.py  test_api_ingest.py  test_consent_verifier.py  test_inconsistency.py  test_llm_eval.py  test_risk_scorer.py
trustline/: config.py  logging_config.py  metrics.py  models.py
trustline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
trustline/analyzers/: consent_verifier.py  inconsistency.py  risk_scorer.py
trustline/db/: mongo.py  postgres.py
trustline/kafka/: consumer.py  producer.py
trustline/llm/: client.py  evaluator.py  prompts.py
trustline/search/: elastic.py
